--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,17 +1,34 @@
-spring:
-	gateway:
-		routes:
-			-id: login
-			 uri:http://login
-			 predicates:
-				 - Path=/login/**
 server:
-	port: 5000
-	compression:
-    enabled: true
-		mime: application/json
-  compression:
-    min-response-size: 5120
+  port: 9999
+spring:
+  application:
+    name: gateway-service
+  cloud:
+    gateway:
+      routes:
+        - id: login-service
+          #uri: http://localhost:8081/
+          uri: lb://Login-SERVICE
+          predicates:
+            - Path=/login/**
+        - id: order-service
+          #uri: http://localhost:8082/
+          uri: lb://ORDER-SERVICE
+          predicates:
+            - Path=/order/**
+        - id: product-service
+          #uri: http://localhost:8083/
+          uri: lb://PRODUCT-SERVICE
+          predicates:
+            - Path=/product/**
 eureka:
-	
-      
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+  instance:
+    prefer-ip-address: true
+
+logging:
+  level:
+    com.netflix: DEBUG
+    org.springframework.cloud.gateway: DEBUG
